src/test/ui/nll/user-annotations/associated-consts.stderr
error: lifetime may not live long enough
  --> $DIR/associated-consts.rs:14:5
   |
LL | fn test<'a, 'b>() {
   |         -- lifetime `'a` defined here
LL |     MyTy::<&'static &'a ()>::INHERENT;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/associated-consts.rs:15:5
   |
LL | fn test<'a, 'b>() {
   |             -- lifetime `'b` defined here
LL |     MyTy::<&'static &'a ()>::INHERENT;
LL |     MyTy::<&'static &'b ()>::TRAIT;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'b` must outlive `'static`

help: the following changes may resolve your lifetime errors
   |
   = help: replace `'a` with `'static`
   = help: replace `'b` with `'static`

error: lifetime may not live long enough
  --> $DIR/associated-consts.rs:25:5
   |
LL | fn test_normalization<'a, 'b>() {
   |                       -- lifetime `'a` defined here
...
LL |     MyTy::<<&'a () as Project>::Assoc>::INHERENT;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/associated-consts.rs:26:5
   |
LL | fn test_normalization<'a, 'b>() {
   |                           -- lifetime `'b` defined here
...
LL |     MyTy::<<&'b () as Project>::Assoc>::TRAIT;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'b` must outlive `'static`

help: the following changes may resolve your lifetime errors
   |
   = help: replace `'a` with `'static`
   = help: replace `'b` with `'static`

error: aborting due to 4 previous errors

